NavBar: index.scss issue fixed (align-items: 'start' -> 'flex-start')

--- a/src/components/shared/nav_bar/index.scss
+++ b/src/components/shared/nav_bar/index.scss
@@ -73,7 +73,7 @@ nav {
       display: flex;
       margin-left: 10px;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
       gap: 3px;
 
       .active {
